fix: stretch app wrapper

--- a/src/styles/components/movie-carousel.scss
+++ b/src/styles/components/movie-carousel.scss
@@ -10,8 +10,8 @@
 .movie-carousel__item {
   text-decoration: none;
   color: #fff;
-  flex-basis: 200px;
-  min-width: 200px;
+  flex-basis: 250px;
+  min-width: 250px;
   background-color: hsl(210, 94%, 70%);
 }
 
